[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/CharacterController.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Character/animations/Character.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Scripts/StateMachine.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Walking.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Running.gd" type="Script" id=10]
[ext_resource path="res://Scripts/SoundEmitter.gd" type="Script" id=11]
[ext_resource path="res://Scripts/Idle.gd" type="Script" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 60.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.53769
height = 1.02148

[node name="Character" type="KinematicBody2D" groups=[
"light_trackers",
]]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )
zoomLevel = Vector2( 0.2, 0.2 )
walkingSpeed = 25
runningSpeed = 50

[node name="SoundRadiusArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoundRadiusArea2D"]
shape = SubResource( 1 )

[node name="PlayerCollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.8, 0.8 )
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 3 )
animation = "IdleFront"
playing = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 8 )

[node name="Walking" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Running" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="SoundEmitter" type="Node" parent="."]
script = ExtResource( 11 )
[connection signal="body_entered" from="SoundRadiusArea2D" to="SoundEmitter" method="_on_SoundRadiusArea2D_body_entered"]
[connection signal="body_exited" from="SoundRadiusArea2D" to="SoundEmitter" method="_on_SoundRadiusArea2D_body_exited"]
